--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>vscode-git dbn</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, corporis.</p>
+        </div>
+    </div>
 </body>
 </html>
