--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <div class="row">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, corporis.</p>
         </div>
+        <div class="div">
+            <img src="./asset/pizza.png" alt="pizza">
+        </div>
     </div>
 </body>
 </html>
